tests/istio_testcases/expected_output/new_online_boutique_synth_res_connectivity_map_wo_fw_rules.txt
TCP Connections:
0.0.0.0-255.255.255.255 => asm-ingress/asm-ingressgateway[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
asm-ingress/asm-ingressgateway[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/adservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/adservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/adservice[Deployment] => default/adservice[Deployment] : All Connections
default/cartservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/cartservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/cartservice[Deployment] => default/cartservice[Deployment] : All Connections
default/checkoutservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/checkoutservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/checkoutservice[Deployment] => default/cartservice[Deployment] : TCP 7070
default/checkoutservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/currencyservice[Deployment] : TCP 7000
default/checkoutservice[Deployment] => default/emailservice[Deployment] : TCP 8080
default/checkoutservice[Deployment] => default/paymentservice[Deployment] : TCP 50051
default/checkoutservice[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/checkoutservice[Deployment] => default/shippingservice[Deployment] : TCP 50051
default/currencyservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/currencyservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/currencyservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/emailservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/emailservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/emailservice[Deployment] => default/emailservice[Deployment] : All Connections
default/frontend[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/frontend[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/frontend[Deployment] => default/adservice[Deployment] : TCP 9555
default/frontend[Deployment] => default/cartservice[Deployment] : TCP 7070
default/frontend[Deployment] => default/checkoutservice[Deployment] : TCP 5050
default/frontend[Deployment] => default/currencyservice[Deployment] : TCP 7000
default/frontend[Deployment] => default/frontend[Deployment] : All Connections
default/frontend[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/frontend[Deployment] => default/recommendationservice[Deployment] : TCP 8080
default/frontend[Deployment] => default/shippingservice[Deployment] : TCP 50051
default/loadgenerator[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/loadgenerator[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/loadgenerator[Deployment] => default/frontend[Deployment] : TCP 8080
default/loadgenerator[Deployment] => default/loadgenerator[Deployment] : All Connections
default/paymentservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/paymentservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/paymentservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/productcatalogservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/recommendationservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/recommendationservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/recommendationservice[Deployment] => default/productcatalogservice[Deployment] : TCP 3550
default/recommendationservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/shippingservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/shippingservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/shippingservice[Deployment] => default/shippingservice[Deployment] : All Connections

non-TCP Connections:
0.0.0.0-255.255.255.255 => asm-ingress/asm-ingressgateway[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/adservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/cartservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/checkoutservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/currencyservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/emailservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/frontend[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/loadgenerator[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/paymentservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/productcatalogservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/recommendationservice[Deployment] : All Connections
0.0.0.0-255.255.255.255 => default/shippingservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
asm-ingress/asm-ingressgateway[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/adservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/cartservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/checkoutservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/currencyservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/emailservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/frontend[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/loadgenerator[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/paymentservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/productcatalogservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/recommendationservice[Deployment] : All Connections
asm-ingress/asm-ingressgateway[Deployment] => default/shippingservice[Deployment] : All Connections
default/adservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/adservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/adservice[Deployment] => default/adservice[Deployment] : All Connections
default/adservice[Deployment] => default/cartservice[Deployment] : All Connections
default/adservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/adservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/adservice[Deployment] => default/emailservice[Deployment] : All Connections
default/adservice[Deployment] => default/frontend[Deployment] : All Connections
default/adservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/adservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/adservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/adservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/adservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/cartservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/cartservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/cartservice[Deployment] => default/adservice[Deployment] : All Connections
default/cartservice[Deployment] => default/cartservice[Deployment] : All Connections
default/cartservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/cartservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/cartservice[Deployment] => default/emailservice[Deployment] : All Connections
default/cartservice[Deployment] => default/frontend[Deployment] : All Connections
default/cartservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/cartservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/cartservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/cartservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/cartservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/checkoutservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/checkoutservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/checkoutservice[Deployment] => default/adservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/cartservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/emailservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/frontend[Deployment] : All Connections
default/checkoutservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/checkoutservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/checkoutservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/currencyservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/currencyservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/currencyservice[Deployment] => default/adservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/cartservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/emailservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/frontend[Deployment] : All Connections
default/currencyservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/currencyservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/currencyservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/emailservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/emailservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/emailservice[Deployment] => default/adservice[Deployment] : All Connections
default/emailservice[Deployment] => default/cartservice[Deployment] : All Connections
default/emailservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/emailservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/emailservice[Deployment] => default/emailservice[Deployment] : All Connections
default/emailservice[Deployment] => default/frontend[Deployment] : All Connections
default/emailservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/emailservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/emailservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/emailservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/emailservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/frontend[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/frontend[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/frontend[Deployment] => default/adservice[Deployment] : All Connections
default/frontend[Deployment] => default/cartservice[Deployment] : All Connections
default/frontend[Deployment] => default/checkoutservice[Deployment] : All Connections
default/frontend[Deployment] => default/currencyservice[Deployment] : All Connections
default/frontend[Deployment] => default/emailservice[Deployment] : All Connections
default/frontend[Deployment] => default/frontend[Deployment] : All Connections
default/frontend[Deployment] => default/loadgenerator[Deployment] : All Connections
default/frontend[Deployment] => default/paymentservice[Deployment] : All Connections
default/frontend[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/frontend[Deployment] => default/recommendationservice[Deployment] : All Connections
default/frontend[Deployment] => default/shippingservice[Deployment] : All Connections
default/loadgenerator[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/loadgenerator[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/loadgenerator[Deployment] => default/adservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/cartservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/checkoutservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/currencyservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/emailservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/frontend[Deployment] : All Connections
default/loadgenerator[Deployment] => default/loadgenerator[Deployment] : All Connections
default/loadgenerator[Deployment] => default/paymentservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/recommendationservice[Deployment] : All Connections
default/loadgenerator[Deployment] => default/shippingservice[Deployment] : All Connections
default/paymentservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/paymentservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/paymentservice[Deployment] => default/adservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/cartservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/emailservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/frontend[Deployment] : All Connections
default/paymentservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/paymentservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/paymentservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/productcatalogservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/adservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/cartservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/emailservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/frontend[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/productcatalogservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/recommendationservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/recommendationservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/recommendationservice[Deployment] => default/adservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/cartservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/emailservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/frontend[Deployment] : All Connections
default/recommendationservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/recommendationservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/recommendationservice[Deployment] => default/shippingservice[Deployment] : All Connections
default/shippingservice[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/shippingservice[Deployment] => asm-ingress/asm-ingressgateway[Deployment] : All Connections
default/shippingservice[Deployment] => default/adservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/cartservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/checkoutservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/currencyservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/emailservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/frontend[Deployment] : All Connections
default/shippingservice[Deployment] => default/loadgenerator[Deployment] : All Connections
default/shippingservice[Deployment] => default/paymentservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/productcatalogservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/recommendationservice[Deployment] : All Connections
default/shippingservice[Deployment] => default/shippingservice[Deployment] : All Connections
